polish: Rune Mysteries (#2245)
* test: add rune mysteries to sidebar opt in test

* refactor: modernize

* fix: properly highlight Lumbridge castle south bottom stairs

* nit: update coords for Duke Horacio

Still the same room, just right inside the door so shortest path idnicator looks nicer

* fix: dialog step to climb down stairs

* nit: add airtalisman to "climb down" step

* fix: instruct directions to Sedridor when wanting to accept the package

* Make "get research package" its own step

* fix: ensure user is prompted to get research package from sedridor

* rename talkToAubury -> deliverPackageToAubury

* fix: don't tell the user to leave before they get the notes

* Clean up note delivery step

* fix: you can actually runecraft before this

* Segment into two sections, and rephrasing them to better match quest

* chore: license

---------

Co-authored-by: Zoinkwiz <zoinkwiz@hotmail.co.uk>